[project]
name = "sec-network-device-scanner"
version = "0.1.0"
description = "Scan local network devices, map MAC OUIs to manufacturers, and flag unknown devices."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "scapy>=2.5.0",
  "rich>=13.7.0",
  "manuf>=1.1.5",
  "psutil>=5.9.8",
]

[project.scripts]
sec-network-device-scanner = "sec_network_device_scanner.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]